--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <script src="script.js"></script>
-<iframe src="//p.lumex.cloud/5rc7npzz4EPA/movie/83149" width="610" height="370" frameborder="0" allowfullscreen></iframe>
+<iframe src="//p.lumex.cloud/5rc7npzz4EPA/movie/83149?autoplay=1" width="610" height="370" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
